--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "url": "https://github.com/philipwalton/mozart/issues"
   },
   "homepage": "https://github.com/philipwalton/mozart",
+  "dependencies": {
+    "private-parts": "~0.4.0"
+  },
   "devDependencies": {
     "shelljs": "^0.2.6",
     "semver": "^2.2.1",
